# langchain-azure-openai-sample-app

./: README.md  pyproject.toml
src/: chain.py  chank.py  json_mode.py  simple_llm.py
src/lib/: llm.py
